--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="theme-color" content="#000000"/>
-        <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins&display=swap" rel="stylesheet">
+<head>
+  <meta charset="UTF-8">
 
-        <title>Proffy</title>
-    </head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#000000" />
+  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins&display=swap"
+    rel="stylesheet">
+
+  <title>Proffy</title>
+</head>
+
 <body>
-    <noscript> You need to enable Javascript to run this app.</noscript>
-    <div id="root">
-        
-    </div>
+  <noscript> You need to enable Javascript to run this app.</noscript>
+  <div id="root">
+
+  </div>
 
 </body>
+
 </html>
